# QTeletextMaker

./: .gitignore  CMakeLists.txt  README.md  decode.cpp  decode.h  document.cpp  document.h  hamming.h  keymap.h  levelonecommands.cpp  levelonecommands.h  levelonepage.cpp  levelonepage.h  loadsave.cpp  loadsave.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  page.cpp  page.h  pagebase.cpp  pagebase.h  pagecomposelinksdockwidget.cpp  pagecomposelinksdockwidget.h  pageenhancementsdockwidget.cpp  pageenhancementsdockwidget.h  pageoptionsdockwidget.cpp  pageoptionsdockwidget.h  pagex26base.cpp  pagex26base.h  palettedockwidget.cpp  palettedockwidget.h  qteletextmaker.pro  qteletextmaker.qrc  render.cpp  render.h  x26commands.cpp  x26commands.h  (+12 more)
examples/: Level1p5-Defcon.tti  Level1p5-KLF.tti  Level1p5-PleaseHammer.tti  Level3p5-CharDesignation.tti  Level3p5-Joseph.tti  Level3p5-Rainbow.tti  Objects-31Shades.tti  Objects-32Shades.tti  Objects-528Shades.tti  Objects-FastDogCat.tti  PopMaster.tti  Rio.tti  SidePanels-NightMail.tti  SidePanels-PriceChop.tti  SubObjects-TeletextStoreBag.tti  Template-ActivePosition.tti  ZZTop.tti  ZomboText.tti
examples/Level2p5-DRCS/: DRCS-CardSuits-MainPage.tti  DRCS-CardSuits-Nptus.tti  DRCS-Parrot-MainPage.tti  DRCS-Parrot-Nptus.tti  README-drcs.md
examples/Level3p5-DRCS/: Level3p5DRCS-ParrotMode1-MainPage.tti  Level3p5DRCS-ParrotMode1-Nptus.tti  Level3p5DRCS-ParrotMode2-MainPage.tti  Level3p5DRCS-ParrotMode2-Nptus.tti  Level3p5DRCS-ParrotMode3-MainPage.tti  (+1 more)
share/: qteletextmaker.desktop
(+57 files in other folders)
